--- a/styles/tarefas.css
+++ b/styles/tarefas.css
@@ -7,6 +7,10 @@ header {
   margin-bottom: 2em;
 }
 
+.task{
+  border-style: none;
+  font-size: 1em;
+}
 a {
   display: block;
   width: fit-content;
@@ -22,6 +26,7 @@ a {
   margin-left: auto;
   color: rgb(223, 223, 223);
 }
+
 
 .user-info p {
   text-transform: capitalize;
@@ -44,6 +49,15 @@ a {
   border-radius: 50vh;
   padding: 5px 10px;
   cursor: pointer;
+}
+button {
+width:5em;
+border-style:solid;
+background-color:rgb(0,0,0,0);
+padding:5px;
+border-color:rgb(0,0,0,0.5);
+border-width:1px;
+margin-right:1em;
 }
 
 /* Nova tarefa ----------------------------------------------------------- */
@@ -242,4 +256,10 @@ a {
   0%{ opacity: 0.5;}
   100%{ opacity: 0.8;}
 }
+
+
+
+
+
+/* Menu ----------------------------------------------------------- */
 
